<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".offers.OfferActivity"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/progressDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/adapter_book"
        tools:itemCount="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/best_offer"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="20dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:gravity="left"

            android:text="@string/tv_info_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/tv_initial_price"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_initial_price"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="-"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="10dp"

            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/tv_type_offer"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_type_offer"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="-"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="10dp"

            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/tv_final_price"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_final_price"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="-"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>